// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleSwitch /> should render a checked ToggleSwitch 1`] = `
<styled.div
  data-component-type="toggle_switch"
>
  <GridLayout
    cells={
      Array [
        Object {
          "content": <React.Fragment>
            <Text
              isInline={false}
              tag="span"
              type="heading"
              weight={600}
            >
              This is a Toggle Switch
            </Text>
            <Text
              isInline={true}
              tag="span"
              type="small"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </Text>
          </React.Fragment>,
          "size": "auto",
        },
        Object {
          "content": <ToggleSwitchInput
            name="test-input"
            value={true}
          />,
          "size": "shrink",
        },
      ]
    }
    gridColumns={12}
    gutterMarginX={24}
    gutterMarginY="none"
    gutterPaddingX="none"
    gutterPaddingY="none"
    horizontalAlignment="left"
    verticalAlignment="stretch"
  />
</styled.div>
`;

exports[`<ToggleSwitch /> should render a disabled ToggleSwitch 1`] = `
<styled.div
  data-component-type="toggle_switch"
>
  <GridLayout
    cells={
      Array [
        Object {
          "content": <React.Fragment>
            <Text
              isInline={false}
              tag="span"
              type="heading"
              weight={600}
            >
              This is a Toggle Switch
            </Text>
            <Text
              isInline={true}
              tag="span"
              type="small"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </Text>
          </React.Fragment>,
          "size": "auto",
        },
        Object {
          "content": <ToggleSwitchInput
            isDisabled={true}
            name="test-input"
            value={false}
          />,
          "size": "shrink",
        },
      ]
    }
    gridColumns={12}
    gutterMarginX={24}
    gutterMarginY="none"
    gutterPaddingX="none"
    gutterPaddingY="none"
    horizontalAlignment="left"
    verticalAlignment="stretch"
  />
</styled.div>
`;

exports[`<ToggleSwitch /> should render a disabled and checked ToggleSwitch 1`] = `
<styled.div
  data-component-type="toggle_switch"
>
  <GridLayout
    cells={
      Array [
        Object {
          "content": <React.Fragment>
            <Text
              isInline={false}
              tag="span"
              type="heading"
              weight={600}
            >
              This is a Toggle Switch
            </Text>
            <Text
              isInline={true}
              tag="span"
              type="small"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </Text>
          </React.Fragment>,
          "size": "auto",
        },
        Object {
          "content": <ToggleSwitchInput
            isDisabled={true}
            name="test-input"
            value={true}
          />,
          "size": "shrink",
        },
      ]
    }
    gridColumns={12}
    gutterMarginX={24}
    gutterMarginY="none"
    gutterPaddingX="none"
    gutterPaddingY="none"
    horizontalAlignment="left"
    verticalAlignment="stretch"
  />
</styled.div>
`;

exports[`<ToggleSwitch /> should render a unchecked ToggleSwitch 1`] = `
<styled.div
  data-component-type="toggle_switch"
>
  <GridLayout
    cells={
      Array [
        Object {
          "content": <React.Fragment>
            <Text
              isInline={false}
              tag="span"
              type="heading"
              weight={600}
            >
              This is a Toggle Switch
            </Text>
            <Text
              isInline={true}
              tag="span"
              type="small"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </Text>
          </React.Fragment>,
          "size": "auto",
        },
        Object {
          "content": <ToggleSwitchInput
            name="test-input"
            value={false}
          />,
          "size": "shrink",
        },
      ]
    }
    gridColumns={12}
    gutterMarginX={24}
    gutterMarginY="none"
    gutterPaddingX="none"
    gutterPaddingY="none"
    horizontalAlignment="left"
    verticalAlignment="stretch"
  />
</styled.div>
`;
